fix: server error when passing empty heartbeats slice fix: do not allow to set id for diagnostics inputs chore: remove authentication for diagnostics endpoint from swagger docs
